html and mise en forme

--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
-  <meta name="description" content="">
+  <title>google</title>
+  <meta name="description" content="Search the world's information, including webpages, images, videos and more. Google has many special features to help you find exactly what you're looking ...">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <div class="container">
+    <div class="row div">
+      <div class="col offset-md-9">
+        <a href="#">Gmail</a>
+        <a class="a1" href="#">Images</a>
+        <a class="a1" href="#"><img class="google_appli img" src="img/appli_google.jpg" alt="appli"/></a>
+        <a class="a1" href="#"><img class="cloche img" src="img/cloche.png" alt="cloche"/></a>
+        <a class="a1" href="#"><img class="connexion img" src="img/connexion.png" alt="connexion"/></a>
+      </div>
+     </div>
+     <div class="row offset-4 mt-5">
+       <div class="col">
+         <img class="logo" src="img/logo.jpg" alt="logo">
+       </div>
+     </div>
+     <input class="champ" type="text" value=" "/>
+     <input type="button" class="Bouton" value="Recherche Google" onclick="location.href='http://www.google.com'"/>
+     <input type="button" class="Bouton2" value="J'ai de la chance" onclick="location.href='http://www.google.com'"/>
+   </div>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+ <footer>
+    <div class = "language">
+      <p>France</p>
+    </div>
+    <div class="bas">
+      <span id="Publicité"><a href="https://adwords.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" target="_blank">Publicité</a></span>
+      <span id="Entreprise"><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none" target="_blank">Entreprise</a></span>
+      <span id="Propos"><a href="https://www.google.com/intl/fr_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1" target="_blank">A Propos</a></span>
+      <span id="Consommateurs"><a href="https://support.google.com/websearch/answer/7585859?p=fr_consumer_info&hl=fr&fg=1&visit_id=1-636649925941865135-3264603980&rd=1" target="_blank">Info Consommateurs</a></span>
+      <span id="Confidentialité"><a href="https://policies.google.com/privacy?hl=fr&gl=fr" target="_blank">Confidentialité</a></span>
+      <span id="Conditions"><a href="https://policies.google.com/terms?hl=fr&gl=fr" target="_blank">Conditions</a></span>
+      <span id="Paramètres"><a href="https://www.google.fr" target="_blank">Paramètres</a></span>
+    </div>
+ </footer>
+
 </body>
-
 </html>
